--- a/WebContent/lib/css/article.css
+++ b/WebContent/lib/css/article.css
@@ -534,25 +534,38 @@ li.comm_2 .comm_text {padding:0 0 0 18px;}
 }
 .cart_style_1 th:last-child { border-right: none; }
 .cart_style_1 td {
+	font-size: 14px;
+	font-weight: 300;
 	padding:15px 0;
 	text-align:center; 
 	border-right:1px solid #e3e3e3; 
 	border-bottom:1px solid #e3e3e3;
 	box-sizing: border-box;
 }
+.cart_style_1 td:last-child { border-right: none; }
 .cart_style_1 th:first-child { width: 80px; }
 .cart_style_1 th:nth-child(2) { width: 100%; }
 .cart_style_1 th:nth-child(3) { width: 100px; }
 .cart_style_1 th:nth-child(4) { width: 150px; }
 .cart_style_1 th:nth-child(5) { width: 100px; }
+
+.cart_style_1.cart_view th:first-child { width: 100%; }
+.cart_style_1.cart_view th:nth-child(2),
+.cart_style_1.cart_view th:nth-child(3),
+.cart_style_1.cart_view th:nth-child(4),
+.cart_style_1.cart_view th:nth-child(5),
+.cart_style_1.cart_view th:nth-child(6),
+.cart_style_1.cart_view th:nth-child(7) { width: 150px; }
+
 .cart_style_1 td.cart_main {text-align:left; padding:15px 30px;}
 .cart_style_1 td.total {border-right:none; font-size:16px; font-weight:bold; color:#353535;}
 .cart_style_1 td.cart_img { width: 320px; height: 200px;  }
 
 .cart_style_1 td p.first {margin-bottom:6px;}
-.cart_style_1 td p.date {font-weight:bold; padding:0 5px;}
-.cart_style_1 td b.c1 {color:#f05d00;}
+.cart_style_1 td p.date {font-weight: 400; padding:0 5px;}
+.cart_style_1 td b.c1 { font-size: 16px; font-weight: 600; margin-right: 3px; }
 .cart_style_1 td b.c2 {color:#346be8;}
+.cart_style_1 td.price_calc p { font-size: 14px; font-weight: 300; }
 
 input.cart_type_1 {width:26px; text-align:center;}
 
@@ -572,7 +585,7 @@ td.cart_main .pb_r_2 p {margin-bottom:13px; line-height:16px; letter-spacing:-1p
 td.cart_main .pb_r_2 p a > span {display:block;}
 td.cart_main .pb_r_2 span.f_style_1 {margin-left:10px;}
 td.cart_main .pb_r_2 p.last span {margin-right:10px;}
-td.cart_main .pb_r_2 p.last b {margin-right:10px;}
+td.cart_main .pb_r_2 p.last b {margin-right: 3px;}
 
 td.cart_main .pb_r_2 p.last_2 {padding-top:15px;}
 td.cart_main .pb_r_2 p.last_2 span.input_box {margin:0 0 0 15px;}
@@ -587,39 +600,57 @@ td.cart_main .product_box {
 }
 
 /* cart style2 */
-
 .cart_style_2 {border:1px solid #575757;}
 .cart_style_2 table {width:100%;}
 .cart_style_2 table th {padding:13px 0 12px 0; background:#fafafa;}
 .cart_style_2 table tr.border { border-bottom:1px solid #e3e3e3; }
 .cart_style_2 table td { padding:10px 0 10px 13px; border-bottom:1px solid #e3e3e3;}
 .cart_style_2 table td.last {border-bottom:none;}
-.cart_style_2 table td b.b_num {font: 600 20px tahoma,dotum; color: var(--main-color);}
+.cart_style_2 table td b.b_num {
+	font-size: 16px;
+	font-weight: 600;
+}
 .no_mem_t1 { margin-top: 5px; }
 /* t_top_style_1 */
 
-.t_top_style_1 td { height: 184px; vertical-align:top;}
 .t_top_style_1 td.mid {vertical-align:middle;}
 .t_top_style_1 td.tt_type1 {padding:15px;}
-.t_top_style_1 td p {overflow:hidden; margin-bottom:10px;}
+.t_top_style_1 td p {overflow:hidden; }
 .t_top_style_1 td p.btn_m1 { height: 100%; }
 .t_top_style_1 td p span.tt_l {float:left;}
 .t_top_style_1 td p span.tt_r {float:right;}
-.t_top_style_1 td p.last {margin-bottom:0;}
+.t_top_style_1 td p.last {
+	font-size: 12px;
+	margin-bottom:0;
+}
 
+.order_btn {
+	display: block;
+	width: 80px;
+	height: 30px;
+	line-height: 30px;
+	margin: auto;
+	border: 1px solid var(--main-color);
+	border-radius: 5px;
+	transition: all .3s ease;
+}
+.order_btn:hover {
+	color: #fff;
+	background: var(--main-color);
+}
 
 /* sub style1 */
-.sub_table_1 {overflow:hidden; border:1px solid var(--border-color);}
+.sub_table_1 {overflow:hidden; border:1px solid #E9E9E9; border-bottom: none;  }
 .sub_table_1 table {width:100%;}
 .sub_table_1 table input { 
 	padding: 15px 5px; 
 	border-radius: 5px;
 	box-sizing: border-box; 
 }
-.sub_table_1 table th {font-size: 14px; font-weight: 500; text-align:left; padding:12px; background:#fafafa; border-bottom:1px solid #e3e3e3;}
-.sub_table_1 table th span {background:url(/images/sub_2/table_list_1.gif) no-repeat left 4px; padding-left:9px;}
+.sub_table_1 table th {font-size: 14px; font-weight: 400; text-align:left; padding:12px; background:#fafafa; border-bottom:1px solid #e3e3e3;}
+.sub_table_1 table th span { font-size: 14px; }
 .sub_table_1 table th p.btn_s5 {margin:5px 0 0 10px;}
-.sub_table_1 table td {font-size: 14px; padding:13px 18px 12px 16px; border-bottom:1px solid #e3e3e3;}
+.sub_table_1 table td {font-size: 12px; font-weight: 300; padding:13px 18px 12px 16px; border-bottom:1px solid #e3e3e3;}
 .sub_table_1 table td.request_type {padding:0px 18px 0px 16px;}
 .sub_table_1 table td .input_box_1 {margin-bottom:8px;}
 .sub_table_1 table td .color_2 {color:#e85946; padding-bottom:10px;}
@@ -719,7 +750,7 @@ td.cart_main .product_box {
 	justify-content: center;
 	font-weight: 500;
 }
-.cart_style_1 td input,
+.cart_style_1 td input.check,
 .product_btn input { display: none; margin-top:-2px;}
 .cart_style_1 td .icon,
 .product_btn .icon {
@@ -747,14 +778,14 @@ td.cart_main .product_box {
   transition-delay: 0.15s;
   opacity: 0;
 }
-.cart_style_1 td input:checked ~ .icon,
-.product_btn input:cheked ~ .icon {
+.cart_style_1 td input.check:checked ~ .icon,
+.product_btn input.check:cheked ~ .icon {
   border-color: 1px solid #D4D4D4;
   background: transparent;
   animation: jelly 0.6s ease;
 }
-.cart_style_1 td input:checked ~ .icon::after,
-.product_btn input:checked ~ .icon::after {
+.cart_style_1 td input.check:checked ~ .icon::after,
+.product_btn input.check:checked ~ .icon::after {
   content: '';
   opacity: 1;
   transform: rotate(45deg) scale(1);
@@ -916,22 +947,21 @@ td.cart_main .product_box {
 	table-layout: fixed;
     min-width: 768px;
 	width:100%; 
-	border-top:2px solid #aeaeae;
+	border-top: 1px solid var(--text-color);
 }
 .s_style_1 th {
 	padding:10px 0; 
 	background:#fafafa; 
-	border-top:1px solid #d1d1d1; 
-	border-right:1px solid #d9d9d9; 
-	border-bottom:1px solid #aeaeae; 
+	border:1px solid #e9e9e9; 
+	border-left: none;
 	font-weight:normal;
 	box-sizing: border-box;
 }
 .s_style_1 td {
 	padding:10px; 
 	text-align:center; 
-	border-right:1px solid #d9d9d9; 
-	border-bottom:1px solid #d9d9d9;
+	border-right:1px solid #e9e9e9; 
+	border-bottom:1px solid #e9e9e9;
 	box-sizing: border-box;
 }
 .s_style_1 td p {line-height:18px;}
@@ -1091,6 +1121,8 @@ p.color_1 {padding:15px 0 8px 0; color:#5686bd; background:url(/images/sub_2/pay
 
 
 @media screen and (max-width: 1140px) {
+	.cart_style_1.cart_view th:first-child { width: 200px; }
+	.table_container { overflow-x: auto; }
 	.sub_contents { width: 100%; }
 	.list_item_wrap .item_wrap {
     	width: 100%;
@@ -1104,7 +1136,6 @@ p.color_1 {padding:15px 0 8px 0; color:#5686bd; background:url(/images/sub_2/pay
 
 
 @media screen and (max-width: 768px) {
-	.table_container { overflow-x: auto; }
 	.title_rocation {
     	flex-direction: column;
     	align-items: flex-start;
@@ -1131,8 +1162,13 @@ p.color_1 {padding:15px 0 8px 0; color:#5686bd; background:url(/images/sub_2/pay
 		text-align: left;
 	}
 	
-	
+	.pricecheck .p_check1::after, 
+	.pricecheck .p_check2::after {
+    	top: 90%;
+    	left: 20px;
+    }
 	.cart_style_1 td.cart_img { display: table-cell; }
+	
 	.top_search input.input_2 { width :40%; }
 	.b_none {
 		display: flex;
