--- a/WebContent/lib/css/join.css
+++ b/WebContent/lib/css/join.css
@@ -741,6 +741,7 @@ i {
 .login_btn:hover { background: var(--hover-color); }
 
 .btn_lnk {
+	width: 100%;
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
@@ -760,16 +761,20 @@ i {
 	margin:0 20px 0 0;
 }
 .btn_lnk ul li.first label,
-.agreement label {
+.agreement label,
+.all_agreement label {
 	display: flex;
 	column-gap: 7px;
 	align-items: center;
 	font-weight: 500;
 }
+.all_agreement label { justify-content: center; }
 .btn_lnk ul li.first input,
-.agreement input { display: none; margin-top:-2px;}
+.agreement input,
+.all_agreement input { display: none; margin-top:-2px;}
 .btn_lnk ul li.first .icon,
-.agreement .icon {
+.agreement .icon,
+.all_agreement .icon {
   display: block;
   position: relative;
   width: 16px;
@@ -779,7 +784,8 @@ i {
   transition: background 0.1 ease;
 }
 .btn_lnk ul li.first .icon::after,
-.agreement .icon::after {
+.agreement .icon::after,
+.all_agreement .icon::after {
   content: '';
   position: absolute;
   top: 1px;
@@ -795,13 +801,15 @@ i {
   opacity: 0;
 }
 .btn_lnk ul li.first input:checked ~ .icon,
-.agreement input:checked ~ .icon {
+.agreement input:checked ~ .icon,
+.all_agreement input:checked ~ .icon {
   border-color: 1px solid #D4D4D4;
   background: transparent;
   animation: jelly 0.6s ease;
 }
 .btn_lnk ul li.first input:checked ~ .icon::after,
-.agreement input:checked ~ .icon::after {
+.agreement input:checked ~ .icon::after,
+.all_agreement input:checked ~ .icon::after {
   content: '';
   opacity: 1;
   transform: rotate(45deg) scale(1);
@@ -911,9 +919,7 @@ i {
 	.b_gui { flex-direction: column; }
 	.b_gui p { width: 100%; }
 	.b_gui p.gui_r { border-top: 1px solid #d0d0d0; border-left: none; }
-	.pricecheck {
-	  flex-direction: column;
-	}
+	.pricecheck { flex-direction: column; }
 	.pricecheck .p_check1 {width: 100%; }
 	.pricecheck .p_check2 {width: 100%; }
 	.pricecheck .p_check3 {width: 100%;}
@@ -921,7 +927,6 @@ i {
 
 
 @media screen and (max-width: 500px) {
-	.tabs { padding-bottom: 0; }
 	.tabs .tab_link {
 		font-size: 14px;
 		padding: 20px 12px;
@@ -937,7 +942,7 @@ i {
 	
 	.join_3_table th { width: 22%; }
 	.join_3_table th { font-size: 12px; }
-	.j_btn1 a, .j_btn1 .next_btn { font-size: 15px; }
+/* 	.j_btn1 a, .j_btn1 .next_btn { font-size: 15px; } */
 }
 
 @media screen and (max-width: 360px) {
