--- a/WebContent/lib/css/cmsbase.css
+++ b/WebContent/lib/css/cmsbase.css
@@ -19,8 +19,16 @@ a:link, a:visited {	color: inherit ;text-decoration: none;	cursor: pointer;}
 a:hover, a:active {color: inherit;text-decoration: none;	cursor: pointer;}
 input, textarea, select {vertical-align:middle; margin:0; color:#4b4b4b; font-family: 'Noto Sans KR', sans-serif;}
 input {padding:0; background:#FFF;}
+input:focus { border: 1px solid var(--main-colo); }
 fieldset {border:0; margin:0px; padding:0px;}
 legend ,caption{border:0; margin:0px; padding:0px; display:none;}
 html, body{height:100%;}
 a {text-decoration:none; color:inherit;}
 img {border:0; vertical-align:middle;}
+
+:root {
+	--main-color: #303030;
+	--sub-color: #00ABF7;
+	--hover-color: #232222;
+	--light-gray: #E4E7EB;
+}
