아이디찾기 비밀번호찾기 ui

--- a/WebContent/lib/css/base.css
+++ b/WebContent/lib/css/base.css
@@ -41,6 +41,7 @@ input::placeholder,
 }
 input[type="number"]::-webkit-outer-spin-button,
 input[type="number"]::-webkit-inner-spin-button {
+	appearance: none;
     -webkit-appearance: none;
     margin: 0;
 }
