--- a/WebContent/lib/css/article.css
+++ b/WebContent/lib/css/article.css
@@ -181,6 +181,10 @@ p.hit span a.h_btn img {margin:-2px 0 0 4px;}
 	margin: auto;
 	border: 1px solid #E2E2E2;
 	border-radius: 9px;
+	transition: border .3s ease-in-out;
+}
+.notice_view_wrap .btn_box a:hover {
+	border: 1px solid var(--main-text);
 }
 
 /* view_style_1 */
@@ -832,6 +836,7 @@ td.cart_main .product_box {
 .product_info .info_list li a {
 	position: relative;
 	display: flex;
+	align-items: center;
 	column-gap: 70px;
 	font-size: 14px;
 	font-weight: 300;
@@ -871,13 +876,34 @@ td.cart_main .product_box {
 .ui-state-default, .ui-widget-content .ui-state-default, .ui-widget-header .ui-state-default { height: 100%; }
 .product_info .info_list li a select {
 	width: 140px;
+	height: 33px;
 	font-size: 14px;
 	font-weight: 300;
 	border: 1px solid #D8D8D8;
 }
 .product_info .info_list li a input {
-	width: 60px;
+	width: 33px;
+	height: 33px;
+	font-size: 12px;
+	text-align: center;
+	border: 1px solid #D8D8D8;
 }
+.product_info .info_list li a .number_box {
+	display: flex;
+	align-items: center;
+}
+.product_info .info_list li a .number_box .minus,
+.product_info .info_list li a .number_box .plus {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	width: 30px !important;
+	height: 33px;
+	border: 1px solid #D8D8D8;
+}
+.product_info .info_list li a .number_box .minus { border-right: none; }
+.product_info .info_list li a .number_box .plus { border-left: none; }
+/* .product_info .info_list li  */
 
 .total_price {
 	text-align: right;
@@ -1077,13 +1103,12 @@ p.color_1 {padding:15px 0 8px 0; color:#5686bd; background:url(/images/sub_2/pay
     text-decoration: none;
     box-sizing: border-box;
 }
-.paging span a.prev { margin-right: 20px; }
-.paging span a.next { margin-left: 20px; }
+.paging span a.prev { margin-right: 5px; }
+.paging span a.next { margin-left: 5px; }
 /* .paging span a.p_last {width:32px; padding:6px 0 0 1px; margin:0 0 0 5px; border:none; background:none; font-size:11px;} */
 /* .paging span a:hover {color:#fff;  background: var(--sub-color); } */
 .paging span b a {color: var(--sub-color); border: 1px solid #D2D2D2; }
 .paging span b a:hover {letter-spacing:0px;}
-
 
 .top_search {
 	width: 100%;
@@ -1141,8 +1166,20 @@ p.color_1 {padding:15px 0 8px 0; color:#5686bd; background:url(/images/sub_2/pay
     	align-items: flex-start;
     	gap: 10px;
 	}
+	
+	.notice_view_wrap .notice_info {
+    	justify-content: flex-start;
+    	flex-direction: column;
+    	align-items: flex-start;
+	}
+	.notice_view_wrap .notice_info > li { width: 100%; padding: 0; }
+	.notice_view_wrap .notice_info > li.notice_tit,
+	.notice_view_wrap .notice_info > li.content_tit { 
+		padding: 10px 0; 
+		border-bottom: 1px solid #d4d4d4;
+	}
 	.notice_view_wrap .notice_info .right_con ul { flex-direction: column; }
-	.notice_view_wrap .notice_info > li.content_tit { max-width: 140px; }
+
 
 	.qu_list thead tr th:first-child {
 		width: 60px;
