--- a/WebContent/lib/css/sub_2.css
+++ b/WebContent/lib/css/sub_2.css
@@ -517,6 +517,7 @@ iframe.i_hide {visibility:hidden; position:absolute; overflow:hidden; width:0; h
 	padding: 0 10px;  
 	 box-sizing: border-box;
 }
+.period_line ul li a:hover { color: #303030; }
 
 .period_line ul li:last-child::after { display: none; } 
 
@@ -648,21 +649,21 @@ p.ev_img img {width:100%;}
 	position: relative;
 	font-size:16px;
 	font-weight: 500;
-	padding:0 0 0 26px; 
+	padding:0 0 0 12px; 
 	margin-top: 30px;
 }
 .section h5::before {
 	content: '';
 	display: block;
 	position: absolute;
-	left: 14px;
+	left: 0;
 	top: 1px;
 	height: 16px;
 	width: 7px;
 	background: var(--sub-color);
 }
 .section h5:first-child { margin-top: 0; }
-.section h6 {font-size:14px; font-weight: 500;  margin:15px 0 0 15px;}
+.section h6 {font-size:14px; font-weight: 500;  margin:15px 0 0 0px;}
 .section > p,
 .section > ol,
 .section > ol > li,
@@ -674,8 +675,8 @@ p.ev_img img {width:100%;}
 	word-break: break-word;
 	line-height: 1.4;
 }
-.section > p { margin:13px 0 0 15px; }
-.section > ol {padding:5px 0 0 15px;}
+.section > p { margin:13px 0 0 0px; }
+.section > ol {padding:5px 0 0 0px;}
 .section > ol > li {margin-top:10px;}
 .section > ol > li > ol > li {margin-top:10px;}
 
