--- a/WebContent/lib/css/common.css
+++ b/WebContent/lib/css/common.css
@@ -7,7 +7,7 @@
 
 input.input_1 {height:14px; padding:6px 0 6px 5px; border:1px solid #b5b5b5;}
 input.input_2 {height:14px; padding:2px 0 1px 5px; border:1px solid #d2d2d2;}
-input.input_3 {height:14px; padding:6px 0 6px 5px; border:1px solid #c2c2c2;}
+input.input_3 {height:14px; padding:6px 0 6px 5px; border:1px solid #dbdbdb;}
 input.check {width:13px; height:13px;}
 input.radio {width:13px; height:13px;}
 select.select_1 { width: 110px; height:28px; border:1px solid #b5b5b5;}
@@ -256,13 +256,19 @@ body.active { overflow-y: hidden; }
 .util_nav ul .cart_item a i { font-size: 0; }
 .util_nav ul .cart_item a .cart_count {
 	position: absolute;
-	top: 46%;
-	left: 2px;
+	top: 34%;
+	left: 5px;
+	width: 14px;
+	height: 14px;
 	font-size: 10px;
 	font-weight: 400;
-	color: var(--sub-color);
+	text-align: center;
+	line-height: 14px;
+	background: var(--sub-color);
+	color: #fff;
 	transform: translateY(-50%);
 	z-index: 1;
+	border-radius: 50%;
 }
 
 .search_box {
