--- a/WebContent/lib/css/sub.css
+++ b/WebContent/lib/css/sub.css
@@ -30,7 +30,7 @@
 .sl_wrap .sl_l h3 {
 	font-size: 40px;
 	font-weight: 600;
-	padding: 0 0 20px 0;
+	padding: 96px 0 20px 0;
     box-sizing: border-box;
 }
 .sl_wrap .sl_l p {float:left; margin:11px 0 0 28px;}
@@ -541,7 +541,7 @@ p.d_tab_roll_btng7{position: static;; bottom:0px; left:0px; width:100%; text-ali
 @media screen and (max-width: 480px) {
 	ul.tabs li { font-size: 14px; }
 	.details_title { font-size: 24px; }
-	.sl_wrap .sl_l h3 { font-size: 30px; padding: 10px 0; }
+	.sl_wrap .sl_l h3 { font-size: 30px;  }
 
 /* 	#galleryWrap > .galleryView { height: 480px; } */
 	ul.sl_type_2 li { width: 100%; height: 100%; }
